<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/result"
        android:text="@string/empty"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/transparent_background"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/firstNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="100dp"
        android:inputType="numberDecimal|numberSigned"
        android:background="@drawable/transparent_background"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/secondNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:layout_marginTop="30dp"
        android:inputType="numberDecimal|numberSigned"
        android:background="@drawable/transparent_background"
        android:gravity="center_vertical|center_horizontal"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:background="@drawable/transparent_background"
        >

        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/division"
            android:onClick="click"
            />
        <Button
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:onClick="click"
            />
        <Button
            android:id="@+id/addition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/addition"
            android:onClick="click"
            />
        <Button
            android:id="@+id/subtraction"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subtraction"
            android:onClick="click"
             />
    </LinearLayout>

</LinearLayout>