<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bird_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:layout_weight="1"
            android:text="@string/bird_name" />

        <TextView
            android:id="@+id/bird_age"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:layout_weight="0.5"
            android:text="@string/bird_age" />

        <TextView
            android:id="@+id/bird_height"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:layout_weight="0.5"
            android:text="@string/bird_height" />
    </LinearLayout>
    <GridLayout
        android:id="@+id/grid_of_birds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="3"
        android:rowCount="30"
        >
    </GridLayout>
</LinearLayout>