<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_700">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nameT"
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/nameE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:ems="10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/loginT"
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/loginE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:ems="10"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/passwordT"
            android:text="@string/password"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/passwordE"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="17sp"
            android:textStyle="bold"
            android:ems="10"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <ImageView
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|center_horizontal"
        android:visibility="invisible"
         />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical|center_horizontal"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/some_change"
        android:onClick="click"/>

</LinearLayout>